--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,7 +3,12 @@ tasks.named('bootJar') {
 }
 
 dependencies {
+
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
+    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
+
     implementation project(':core')
+    implementation("org.springframework.boot:spring-boot-starter-security:3.4.1")
     implementation("org.liquibase:liquibase-core:4.30.0")
     implementation("org.springframework.boot:spring-boot-starter-data-redis:3.4.1")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2")
@@ -15,5 +20,6 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-openfeign:4.2.0")
     implementation("org.postgresql:postgresql:42.7.4")
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
 }
 
